--- a/HTML y CSS/Clase-1/css/style.css
+++ b/HTML y CSS/Clase-1/css/style.css
@@ -1,92 +1,127 @@
 header{
+    background-color: darkred;
     width: 100%;
     height: 20vh;
-    background-color: red;
-    display: flex;
-    align-items: flex;
-    justify-content: space-between;
 }
 
 #cuadro{
-    width: 80px;
-    height: 40px;
-    margin: 1%;
-    background-color: lightgrey;
-    padding: 2%;
+    background-color: bisque;
+    color: blue;
+    width: 100px;
+    height: 20px;
     text-align: center;
-}
-
-#navegación p{
-    color: white;
-    background-color: blue;
-    display: inline-block;
-    margin-right: 10px;
-    margin-top: 80px;
+    position: relative;
+    padding: 50px;
+    left: 20px;
     font-size: 20px;
-    padding: 20px 60px 20px 20px;
+    margin: 0;
+    display: inline;
+    top: 80px;
 }
 
-.container{
-    display: flex;
+.menu li{
+    background-color: blueviolet;
+    list-style: none;
+    color: white;
+    margin: 5px;
+    display: inline-block;
+    left: 730px;
+    position: relative;
+    top: 80px;
+    padding-right: 50px;
+    padding-left: 20px;
 }
 
-section#left{
+#container{
+    width: 100%;
+    height: 70vh;
+    display: block;
+}
+
+#left{
+    width: 60%;
+    height: 70vh;
     background-color: aqua;
-    width: 65%;
-    height: 73vh;
 }
 
-h2{
-    font-size: 50px;
+#noticias{
+    margin: 0px;
+    position: relative;
+    top: 20px;
+    left: 20px;
+    font-size: 40px;
+    font-family: 'Courier New', Courier, monospace;
 }
 
-img{
+#imagen{
     width: 400px;
     height: 400px;
-    display: flex;
     border: 2px solid black;
-    margin-left: 300px;
-
+    position: relative;
+    top: 80px;
+    left: 150px;
 }
 
-#descripción{
-    display: flex;
-    margin-bottom: 40px;
-    margin-left: 300px;
+#description{
+    position: relative;
+    top: 80px;
+    left: 150px;
+    margin: 10px 0px;
 }
 
-section#right{
-    flex-direction: column;
+:right{
+    width: 40%;
+    height: 70vh;
 }
 
-#right_top{
-    background-color: blueviolet;
-    font-size: 25px;
-    width: 700px;
+#top_right{
+    background-color: olive;
+    position: relative;
+    margin: 0px;
+    width: 40%;
     height: 35vh;
-    padding-top: 20px;
-    padding-left: 20px;
-
+    float: right;
+    bottom: 650px;
 }
 
-#right_bot{
-    background-color: greenyellow;
-    width: 100%;
-    height: 35.8vh;
+#novedades{
+    position: relative;
+    left: 40px;
+    top: 10px;
+    font-size: 40px;
+}
 
+#lista1{
+    list-style: none;
+    color: rgb(38, 49, 206);
+    position: relative;
+    margin: 15px;
+    font-size: 20px;
+}
+
+#bottom_right{
+    background-color: grey;
+    position: relative;
+    margin: 0px;
+    width: 40%;
+    height: 309px;
+    float: right;
+    bottom: 325px;
+    left: 533px;
 }
 
 footer{
-    background-color: brown;
+    background-color: green;
     width: 100%;
     height: 10vh;
+    margin-top: -16px;
 }
 
-#texto_pie{
-    font-size: 25px;
-    margin-top: 0px;
-    margin-left: 15px;
-    display: flex;
-    text-align: center;
-    padding: 30px;
+#pie{
+    position: relative;
+    bottom: 300px;
+    left: 30px;
+    font-size: 15px;
+    margin: 0;
+    display: inline;
 }
